<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".GameDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_game_detail"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppBarTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_game_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_game_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/placeholder"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_game_detail"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginEnd="48dp"
                app:layout_collapseMode="pin" />

            <include layout="@layout/progress_bar_default" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite_white"
        app:layout_anchor="@id/app_bar_game_detail"
        app:layout_anchorGravity="bottom|right|end"
        app:rippleColor="@android:color/white" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_share_white"
        app:layout_anchor="@id/app_bar_game_detail"
        app:layout_anchorGravity="bottom|left|end"
        app:rippleColor="@android:color/white" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="6dp"
                card_view:cardElevation="4dp"
                card_view:cardMaxElevation="6dp">

                <TextView
                    android:id="@+id/tv_game_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textColor="@android:color/tertiary_text_dark"
                    tools:text="@tools:sample/lorem" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/Widget.CardContent"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/placeholder"
                        android:gravity="center"
                        android:src="@drawable/ic_access_time_accent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_wiki"
                style="@style/Widget.CardContent"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/wiki"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/placeholder"
                        android:gravity="center"
                        android:src="@drawable/ic_description_accent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_shop"
                style="@style/Widget.CardContent"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/shop"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/placeholder"
                        android:gravity="center"
                        android:src="@drawable/ic_shopping_accent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_cheats"
                style="@style/Widget.CardContentCheats"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_ceat_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_ceat_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_ceat_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
